# ProjectQ

./: CMakeLists.txt  MANIFEST.in  _cmake_setup.py  _py_setup.py  requirements.txt  setup.py
cmake/: compiler_flags.cmake  macros.cmake  options.cmake  packages.cmake  pybind11.cmake  python.cmake
docs/: index.rst  projectq.ops.rst  projectq_extensions.rst
projectq/: __init__.py
projectq/backends/: __init__.py  _json_converter_test.py
projectq/backends/_circuits/: _drawer_matplotlib.py  _plot.py  _to_latex.py  _to_latex_test.py
projectq/backends/_ibm/: _ibm.py
projectq/backends/_sim/: _classical_simulator.py  _simulator.py
projectq/backends/_sim/_cppkernels/: simulator.hpp
projectq/backends/_sim/_cppkernels/neon/: cintrin.hpp  convert.hpp  kernel1.hpp  kernel2.hpp  kernel3.hpp  kernel4.hpp  kernel5.hpp  kernels.hpp
projectq/cengines/: __init__.py  _basicmapper.py  _basics.py  _linearmapper.py  _main.py  _optimize.py  _twodmapper.py
projectq/cengines/_core/: __init__.py
projectq/cengines/_replacer/: _replacer.py  _replacer_test.py
projectq/libs/math/: _constantmath.py  _constantmath_test.py  _default_rules.py
projectq/libs/revkit/: _permutation_test.py
projectq/meta/: _dagger.py
projectq/ops/: __init__.py  _basics.py  _basics_test.py  _command.py  _gates.py  _gates_test.py  _metagates.py  _qubit_operator.py  _uniformly_controlled_rotation.py  _uniformly_controlled_rotation_test.py  _unitary_gates.py  _unitary_gates_test.py
projectq/setups/: grid.py  linear.py
projectq/setups/decompositions/: __init__.py  carb1qubit2cnotrzandry.py  cunitary2rzry_test.py  diag2uniformlycontrolled.py  diag2uniformlycontrolled_test.py  phaseestimation.py  phaseestimation_test.py  time_evolution.py  unitary2rzry_test.py
toolchain/: aarch64-clang.cmake.example  aarch64-gcc.cmake.example
